Rewrite to use **DATAPACK REGISTRIES** :D